tests/paczka1/fuzzy1/43919701.err
Error in line 13: qJKoMabW5y S926 131,0
Error in line 34: GkJQJ S926 94,76
Error in line 37: S@26 S@26 56,0
